006 Custom Page Titles & Meta

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,10 +18,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>AddisShop</title>
+    <title>Welcom To AddisShop</title>
   </head>
   <body>
-    <noscript>Buy electronic device easy with affordable price.</noscript>
+    <noscript>We sell the best products for cheap</noscript>
     <div id="root"></div>
   </body>
 </html>
